--- a/index.html
+++ b/index.html
@@ -263,8 +263,7 @@
   <section>
     <div class="container">
       <div class="section-title">
-        <h2>Gallery</h2>
-        <p>Add your travel and vehicle images here</p>
+        <h2>Gallery</h2
       </div>
       <div class="gallery-grid">
         <img src="https://lh3.googleusercontent.com/p/AF1QipOCQ30XbXGvZ_T0_MUf5egm6x9bmeHMQN1qdQ2q=w243-h174-n-k-no-nu" alt="Travel Image 1">
@@ -291,3 +290,4 @@
 
 </body>
 </html>
+
